Actions
Bug #5903
closedSMB server breaks an oplock on after an attribute (only) open
Start date:
2015-05-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
The SMB oplock protocol (cache delegations) is complicated. We were needlessly revoking cache state (sending an "oplock break") in a case where a new client open had access rights that only allowed attribute changes. We're not supposed to revoke cache delegations in such a case.
Updated by Electric Monk over 7 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit fb699f1e35c673b043b5de07040056cd5cb0b50e
commit fb699f1e35c673b043b5de07040056cd5cb0b50e Author: Alek Pinchuk <alek@nexenta.com> Date: 2015-05-08T14:39:14.000Z 5903 SMB server breaks an oplock on after an attribute (only) open Reviewed by: Gordon Ross <gwr@nexenta.com> Reviewed by: Kevin Crowe <kevin.crowe@nexenta.com> Reviewed by: Rich Lowe <richlowe@richlowe.net> Approved by: Dan McDonald <danmcd@omniti.com>
Actions