5903 SMB server breaks an oplock on after an attribute (only) open Reviewed by: Gordon Ross <gwr@nexenta.com> Reviewed by: Kevin Crowe <kevin.crowe@nexenta.com> Reviewed by: Rich Lowe <richlowe@richlowe.net> Approved by: Dan McDonald <danmcd@omniti.com>