usr/src/uts/common/fs/smbsrv/smb_common_open.c
@@ -21,7 +21,7 @@
 
 /*
  * Copyright (c) 2007, 2010, Oracle and/or its affiliates. All rights reserved.
- * Copyright 2013 Nexenta Systems, Inc.  All rights reserved.
+ * Copyright 2014 Nexenta Systems, Inc.  All rights reserved.
  */
 
 /*
@@ -578,54 +578,36 @@ smb_open_subr(smb_request_t *sr)
 			}
 		}
 
-		/*
-		 * Oplock break is done prior to sharing checks as the break
-		 * may cause other clients to close the file which would
-		 * affect the sharing checks.
-		 */
-		smb_node_inc_opening_count(node);
-		smb_open_oplock_break(sr, node);
-
-		smb_node_wrlock(node);
-
 		if ((op->create_disposition == FILE_SUPERSEDE) ||
 		    (op->create_disposition == FILE_OVERWRITE_IF) ||
 		    (op->create_disposition == FILE_OVERWRITE)) {
 
-			if ((!(op->desired_access &
-			    (FILE_WRITE_DATA | FILE_APPEND_DATA |
-			    FILE_WRITE_ATTRIBUTES | FILE_WRITE_EA))) ||
-			    (!smb_sattr_check(op->fqi.fq_fattr.sa_dosattr,
-			    op->dattr))) {
-				smb_node_unlock(node);
-				smb_node_dec_opening_count(node);
+			if (!smb_sattr_check(op->fqi.fq_fattr.sa_dosattr,
+			    op->dattr)) {
 				smb_node_release(node);
 				smb_node_release(dnode);
 				smbsr_error(sr, NT_STATUS_ACCESS_DENIED,
 				    ERRDOS, ERRnoaccess);
 				return (NT_STATUS_ACCESS_DENIED);
 			}
+
+			if (smb_node_is_dir(node)) {
+				smb_node_release(node);
+				smb_node_release(dnode);
+				return (NT_STATUS_ACCESS_DENIED);
+			}
 		}
 
-		status = smb_fsop_shrlock(sr->user_cr, node, uniq_fid,
-		    op->desired_access, op->share_access);
-
-		if (status == NT_STATUS_SHARING_VIOLATION) {
-			smb_node_unlock(node);
-			smb_node_dec_opening_count(node);
-			smb_node_release(node);
-			smb_node_release(dnode);
-			return (status);
-		}
+		/* MS-FSA 2.1.5.1.2 */
+		if (op->create_disposition == FILE_SUPERSEDE)
+			op->desired_access |= DELETE;
+		if ((op->create_disposition == FILE_OVERWRITE_IF) ||
+		    (op->create_disposition == FILE_OVERWRITE))
+			op->desired_access |= FILE_WRITE_DATA;
 
 		status = smb_fsop_access(sr, sr->user_cr, node,
 		    op->desired_access);
-
 		if (status != NT_STATUS_SUCCESS) {
-			smb_fsop_unshrlock(sr->user_cr, node, uniq_fid);
-
-			smb_node_unlock(node);
-			smb_node_dec_opening_count(node);
 			smb_node_release(node);
 			smb_node_release(dnode);
 
@@ -640,21 +622,42 @@ smb_open_subr(smb_request_t *sr)
 			}
 		}
 
+		if (max_requested) {
+			smb_fsop_eaccess(sr, sr->user_cr, node, &max_allowed);
+			op->desired_access |= max_allowed;
+		}
+
+		/*
+		 * Oplock break is done prior to sharing checks as the break
+		 * may cause other clients to close the file which would
+		 * affect the sharing checks. This may block, so set the
+		 * file opening count before oplock stuff.
+		 */
+		smb_node_inc_opening_count(node);
+		smb_open_oplock_break(sr, node);
+
+		smb_node_wrlock(node);
+
+		/*
+		 * Check for sharing violations
+		 */
+		status = smb_fsop_shrlock(sr->user_cr, node, uniq_fid,
+		    op->desired_access, op->share_access);
+		if (status == NT_STATUS_SHARING_VIOLATION) {
+			smb_node_unlock(node);
+			smb_node_dec_opening_count(node);
+			smb_node_release(node);
+			smb_node_release(dnode);
+			return (status);
+		}
+
+		/*
+		 * Go ahead with modifications as necessary.
+		 */
 		switch (op->create_disposition) {
 		case FILE_SUPERSEDE:
 		case FILE_OVERWRITE_IF:
 		case FILE_OVERWRITE:
-			if (smb_node_is_dir(node)) {
-				smb_fsop_unshrlock(sr->user_cr, node, uniq_fid);
-				smb_node_unlock(node);
-				smb_node_dec_opening_count(node);
-				smb_node_release(node);
-				smb_node_release(dnode);
-				smbsr_error(sr, NT_STATUS_ACCESS_DENIED,
-				    ERRDOS, ERROR_ACCESS_DENIED);
-				return (NT_STATUS_ACCESS_DENIED);
-			}
-
 			op->dattr |= FILE_ATTRIBUTE_ARCHIVE;
 			/* Don't apply readonly bit until smb_ofile_close */
 			if (op->dattr & FILE_ATTRIBUTE_READONLY) {
@@ -811,11 +814,11 @@ smb_open_subr(smb_request_t *sr)
 
 		created = B_TRUE;
 		op->action_taken = SMB_OACT_CREATED;
-	}
 
-	if (max_requested) {
-		smb_fsop_eaccess(sr, sr->user_cr, node, &max_allowed);
-		op->desired_access |= max_allowed;
+		if (max_requested) {
+			smb_fsop_eaccess(sr, sr->user_cr, node, &max_allowed);
+			op->desired_access |= max_allowed;
+		}
 	}
 
 	status = NT_STATUS_SUCCESS;
@@ -966,7 +969,7 @@ static boolean_t
 smb_open_attr_only(smb_arg_open_t *op)
 {
 	if (((op->desired_access & ~(FILE_READ_ATTRIBUTES |
-	    FILE_WRITE_ATTRIBUTES | SYNCHRONIZE)) == 0) &&
+	    FILE_WRITE_ATTRIBUTES | SYNCHRONIZE | READ_CONTROL)) == 0) &&
 	    (op->create_disposition != FILE_SUPERSEDE) &&
 	    (op->create_disposition != FILE_OVERWRITE)) {
 		return (B_TRUE);
